force-app/main/default/objects/ssot__AnalyticsGenerativeMetadata__dlm/fields/ssot__AssetSubtype__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetSubtype__c</fullName>
    <label>Asset Subtype</label>
    <length>50</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetSubtype</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>