force-app/main/default/objects/ssot__AnalyticsGenerativeMetadata__dlm/fields/ssot__GenerativeDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__GenerativeDescription__c</fullName>
    <label>Generative Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GenerativeDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>