force-app/main/default/objects/ssot__AnalyticsGenerativeMetadata__dlm/fields/ssot__MetadataHashText__c.field-meta.xml
<CustomField>
    <fullName>ssot__MetadataHashText__c</fullName>
    <label>Metadata Hash</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MetadataHashText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>