force-app/main/default/objects/ssot__AnalyticsGenerativeMetadata__dlm/fields/ssot__RelatedObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedObject__c</fullName>
    <label>Related Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>